--- a/kwf-theme/css/base.css
+++ b/kwf-theme/css/base.css
@@ -1,6 +1,6 @@
 body {
     background: #3b3b3b;
-    padding-top: 80px;
+    padding-top: 70px;
     color: #ddd;
 }
 
@@ -62,6 +62,11 @@ ul {
     padding-left: 20px;
     line-height: 23px;
     margin-left: 0px;
+}
+
+.well {
+    border-color: #2e2e2e;
+    background: #2e2e2e;
 }
 
 .container a {
