--- a/kwf-theme/css/base.css
+++ b/kwf-theme/css/base.css
@@ -316,6 +316,68 @@ h1:hover .headerlink, h2:hover .headerlink, h3:hover .headerlink, h4:hover .head
 }
 
 /* display submenu relative to parent*/
+@media (min-width: 768px) and (max-width: 1320px) {
+    .navbar-nav {
+        text-align: center;
+        max-width: 720px;
+        margin: 0 auto;
+        float: none;
+    }
+
+    .navbar-nav > li {
+        display: inline-block;
+        text-align: left;
+        float: none;
+    }
+
+    .navbar-main > li:nth-child(5) .dropdown-menu, .navbar-main > li:nth-child(6) .dropdown-menu {
+        left: 0;
+        right: initial;
+    }
+
+    .navbar-main > li:nth-child(5) .dropdown-submenu > .dropdown-menu, .navbar-main > li:nth-child(6) .dropdown-submenu > .dropdown-menu {
+        border-radius: 0 4px 4px 0;
+        right: initial;
+        left: 100%;
+    }
+
+    .navbar-main > li:nth-child(5) .dropdown-submenu > a:after, .navbar-main > li:nth-child(6) .dropdown-submenu > a:after {
+        border-color: transparent;
+        border-width: 5px 0 5px 5px;
+        border-left-color: #999999;
+        float: right;
+        margin-left: 0;
+        margin-left: -10px;
+    }
+}
+
+@media (min-width: 768px) {
+    .navbar-main > li:nth-child(1) .dropdown-menu, .navbar-main > li:nth-child(2) .dropdown-menu, .navbar-main > li:nth-child(3) .dropdown-menu {
+        left: 0;
+        right: initial;
+    }
+
+    .navbar-main > li:nth-child(1) .dropdown-submenu > .dropdown-menu, .navbar-main > li:nth-child(2) .dropdown-submenu > .dropdown-menu, .navbar-main > li:nth-child(3) .dropdown-submenu > .dropdown-menu {
+        border-radius: 0 4px 4px 0;
+        right: initial;
+        left: 100%;
+    }
+
+    .navbar-main > li:nth-child(1) .dropdown-submenu > a:after, .navbar-main > li:nth-child(2) .dropdown-submenu > a:after, .navbar-main > li:nth-child(3) .dropdown-submenu > a:after {
+        border-color: transparent;
+        border-width: 5px 0 5px 5px;
+        border-left-color: #999999;
+        float: right;
+        margin-left: 0;
+        margin-left: -10px;
+    }
+}
+
+.dropdown-menu {
+    left: initial;
+    right: 0;
+}
+
 .dropdown-submenu {
     position: relative;
 }
@@ -323,12 +385,10 @@ h1:hover .headerlink, h2:hover .headerlink, h3:hover .headerlink, h4:hover .head
 /* sub menu stlye */
 .dropdown-submenu>.dropdown-menu {
     top: 0;
-    left: 100%;
+    right: 100%;
     margin-top: 0px;
     margin-left: -1px;
-    -webkit-border-radius: 0 4px 4px 4px;
-    -moz-border-radius: 0 4px 4px;
-    border-radius: 0 4px 4px 4px;
+    border-radius: 4px 0 0 4px;
 }
 
 /* display sub menu on hover*/
@@ -340,15 +400,15 @@ h1:hover .headerlink, h2:hover .headerlink, h3:hover .headerlink, h4:hover .head
 .dropdown-submenu>a:after {
     display: block;
     content: " ";
-    float: right;
+    float: left;
     width: 0;
     height: 0;
     border-color: transparent;
     border-style: solid;
-    border-width: 5px 0 5px 5px;
-    border-left-color: #999999;
+    border-width: 5px 5px 5px 0;
+    border-right-color: #999999;
     margin-top: 5px;
-    margin-right: -10px;
+    margin-left: -10px;
 }
 
 /* little arrow of parent menu */
